Fix text align issues

--- a/app/assets/stylesheets/about.sass
+++ b/app/assets/stylesheets/about.sass
@@ -56,6 +56,7 @@
   .body-text
     padding-top: 48px
     padding-bottom: 48px
+    text-align: center
 
 .image-container
   text-align: center
